Fix spacing on centre services and info

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -114,6 +114,7 @@ Global stylesheet
 @import "partials/abstractions/toggle-content";
 @import "partials/abstractions/angular-cloak";
 @import "partials/abstractions/flag";
+@import "partials/abstractions/spacing";
 
 /* Modules */
 @import "partials/modules/feedback";
