--- a/app/views/centre_info/_parking_fixed_rate.html.erb
+++ b/app/views/centre_info/_parking_fixed_rate.html.erb
@@ -1,4 +1,4 @@
-<div class="grid grid--gutter-dbl grid--mrg-dbl-non-palm">
+<div class="grid grid--gutter-dbl">
   <div class="grid__item non-palm-one-half">
     <p>Fixed Parking rate of $<%= @parking.flat_rate %> per day</p>
 
