--- a/app/assets/stylesheets/partials/layout/grid/_grid.scss
+++ b/app/assets/stylesheets/partials/layout/grid/_grid.scss
@@ -27,6 +27,12 @@
 
 	/* Very infrequently occuring grid rows as children of grid rows */
 	> .grid {margin-left: 0;}
+
+	/* Non-linear (always cols) version */
+	&.grid--non-linear {
+		/* Need to offset bottom margin to keep spacing consistent */
+		@include to-rem(margin-bottom, -$grid-gutter);
+	}
 }
 
 	/* Grid item */
@@ -70,11 +76,6 @@
 /* Base margin of `grid__item` at non-palm */
 @include respond-min($non-palm) {
 	.grid--mrg-base-non-palm > .grid__item {@include to-rem(margin-bottom, $spacing-base);}
-}
-
-/* Double the bottom margin of `grid__item` at non-palm */
-@include respond-min($non-palm) {
-	.grid--mrg-dbl-non-palm > .grid__item {@include to-rem(margin-bottom, $spacing-dbl);}
 }
 
 /* Double the gutter */
