--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -18,7 +18,7 @@
 <%# //Nav contextual %>
 
 <%# Divider %>
-<div class="divider">
+<div class="divider divider--lrg">
   <%# Text formatted %>
   <div class="txt-formatted">
 
