--- a/app/assets/stylesheets/partials/abstractions/_spacing.scss
+++ b/app/assets/stylesheets/partials/abstractions/_spacing.scss
@@ -1,5 +1,5 @@
 /* ======================================================================================
-   @MODULES -> SECTION SPACING
+   @ABSTRACTIONS -> SPACING
    ====================================================================================== */
 
 /*
