Adding 2 new links to site header and 1 link to national home page - WSF-5664

--- a/app/assets/stylesheets/partials/base/_main.scss
+++ b/app/assets/stylesheets/partials/base/_main.scss
@@ -34,8 +34,9 @@ body {
 		}
 	}
 
-	/* Turn off bottom padding for 'Stores' */
-	&.stores {padding-bottom: 0;}
+	/* Turn off bottom padding for 'Stores' and 'National homepage' */
+	&.stores,
+	&.national {padding-bottom: 0;}
 }
 
 /* Set `font-family` and `color` */
