--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -155,6 +155,9 @@
         <li>
           <%= link_to 'Our Community', 'http://corporate.westfield.com/about/sustainability/', rel: 'external' %>
         </li>
+        <!-- <li>
+          <%= link_to 'Media', 'http://media.westfield.com.au', rel: 'external' %>
+        </li> -->
       </ul>
 
       <nav role="navigation" class="national__footer__nav">
