--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -106,7 +106,9 @@
 					<%# Tertiary navigation %>
 					<nav class="nav-tertiary" role="navigation" aria-label="Tertiary navigation">
 						<ul>
+							<li class="nav-buy-gift-cards"><%= link_to 'Buy Gift Cards', 'http://www.westfieldgiftcards.com.au', rel: 'external' %></li>
 							<li><%= link_to 'Westfield Group', 'http://corporate.westfield.com/', rel: 'external' %></li>
+							<!-- <li><%= link_to 'Media', 'http://media.westfield.com.au', rel: 'external' %></li> -->
 							<li><%= link_to 'Terms &amp; Conditions'.html_safe, '/terms-conditions' %></li>
 							<li><%= link_to 'Privacy Policy', '/privacy-policy' %></li>
 						</ul>
@@ -124,6 +126,10 @@
 				<h1 class="header-centre-select__centre-name"><%= @centre.short_name %></h1>
 			</div>
 			<%# //Centre selector (tablet small) %>
+
+			<%# Gift Card link %>
+			<a href="http://www.westfieldgiftcards.com.au" rel="external" class="nav-buy-gift-cards--alt"><span class="icon icon--gift-card icon--spacing" aria-hidden="true"></span>Buy Gift Cards</a>
+			<%# //Gift Card link %>
 
 			<%# Search toggle / favourites (palm) %>
 			<div class="search-toggle-favs hide-fully--non-palm">
