--- a/app/views/centre_info/_community.html.erb
+++ b/app/views/centre_info/_community.html.erb
@@ -4,7 +4,7 @@
 <%= image_tag 'http://placehold.it/980x280', class: 'mrg-base', alt: 'Photo of [name of the community where the photo came from]' %>
 
 <%# [BACKEND] To do the 2 columns, please set up two text fields in back office with character limit for each text field (that needs to be determined later). Each text field will correspond to one `grid__item` %>
-<div class="spacing spacing--mrg-dbl">
+<div class="spacing spacing--dbl">
   <div class="grid grid--gutter-dbl">
     <div class="grid__item non-palm-one-half">
       <%# [BACKEND] In backoffice console, if user hits `ENTER`, need to make sure a new `p` is generated %>
@@ -21,7 +21,7 @@
 <%# //Community %>
 
 <%# [BACKEND] Individual community - the number of community shown will be dynamic so need to replicate this block of code for each one %>
-<div class="spacing spacing--mrg-dbl">
+<div class="spacing spacing--dbl">
   <div class="grid grid--gutter-dbl">
     <div class="grid__item non-palm-one-half">
       <div class="box">
