--- a/app/views/centre_info/_contact_us.html.erb
+++ b/app/views/centre_info/_contact_us.html.erb
@@ -1,7 +1,7 @@
 <%# Contact Us %>
 <% if @centre.phone_number.present? or @centre.email_address.present? %>
   <h2 id="contact-us">Contact Us</h2>
-  <div class="spacing spacing--mrg-dbl">
+  <div class="spacing spacing--dbl">
     <div class="grid grid--gutter-dbl">
 
       <%# Phone number %>
