--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -9,7 +9,7 @@
 
     <%# Concierge Desk %>
     <% if @concierge.present? %>
-      <div class="spacing spacing--mrg-dbl">
+      <div class="spacing spacing--dbl">
         <div class="grid grid--gutter-dbl">
           <div class="grid__item non-palm-one-half">
             <h3>Concierge Desk</h3>
@@ -46,7 +46,7 @@
    <%# //Concierge Desk %>
 
    <%# Westfield gift cards %>
-   <div class="spacing spacing--mrg-dbl">
+   <div class="spacing spacing--dbl">
       <div class="grid grid--gutter-dbl">
         <div class="grid__item non-palm-one-half">
           <%= image_tag 'gift-cards.jpg', alt: '', quality: 25 %>
