--- a/app/views/centre_info/_notices.html.erb
+++ b/app/views/centre_info/_notices.html.erb
@@ -2,7 +2,7 @@
 <h2 id="notice">Notices</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-<div class="spacing spacing--mrg-dbl">
+<div class="spacing spacing--dbl">
   <div class="grid grid--gutter-dbl">
     <div class="grid__item non-palm-one-whole">
       <ul class="txt-formatted__list-unstyled">
