--- a/app/views/centre_info/_parking_complimentary.html.erb
+++ b/app/views/centre_info/_parking_complimentary.html.erb
@@ -1,4 +1,4 @@
-<div class="spacing spacing--mrg-dbl">
+<div class="spacing spacing--dbl">
   <div class="grid grid--gutter-dbl">
     <div class="grid__item non-palm-one-half">
       <p>Complimentary parking available for all customers.</p>
