--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -26,7 +26,7 @@
 
           <%# Filters %>
           <%# [BACKEND] Markup for the 'Category' and 'Gift Card' filters %>
-          <%#<ul class="stores-maps__filters horiz-list horiz-list--gutter-half">
+          <ul class="stores-maps__filters horiz-list horiz-list--gutter-half">
 
               <li class="drop-down-menu drop-down-container">
                 <button class="drop-down-menu__trigger btn btn--main btn--main-alt2 btn--pointer btn--pointer-padding-med" toggle-visibility="stores-filters">Category<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button>
@@ -54,7 +54,7 @@
                 </label>
               </li>
 
-          </ul>%>
+          </ul>
           <%# //Filters %>
 
           <%# List/map toggle %>
@@ -69,11 +69,11 @@
 
         <%# Post filter count %>
         <%# [BACKEND] inject this when a category filter has been applied, see the store name in the list below for further instructions %>
-        <%# <div class="stores-maps__filters-count">
+        <div class="stores-maps__filters-count">
           <div class="container">
-            <p aria-live="polite"><span class="icon icon--pin"></span> 44 Results found</p>
+            <p aria-atomic="true" aria-live="polite"><span class="icon icon--pin"></span> 44 Results found</p>
           </div>
-        </div> %>
+        </div>
         <%# //Post filter count %>
 
       </div>
