WSF-5675: Add icon--fixed-width to social icons on info page

--- a/app/views/centre_info/_social_media.html.erb
+++ b/app/views/centre_info/_social_media.html.erb
@@ -7,7 +7,7 @@
         <a href="<%= @centre.facebook %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
           <div class="flag__image">
             <div class="box islet">
-              <span class="icon icon--facebook icon--base-color" aria-hidden="true"></span>
+              <span class="icon icon--facebook icon--base-color icon--fixed-width" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
@@ -24,7 +24,7 @@
         <a href="<%= @centre.twitter %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
           <div class="flag__image">
             <div class="box islet">
-              <span class="icon icon--twitter icon--base-color" aria-hidden="true"></span>
+              <span class="icon icon--twitter icon--base-color icon--fixed-width" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
@@ -41,7 +41,7 @@
         <a href="<%= @centre.instagram %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
           <div class="flag__image">
             <div class="box islet">
-              <span class="icon icon--instagram icon--base-color" aria-hidden="true"></span>
+              <span class="icon icon--instagram icon--base-color icon--fixed-width" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
@@ -58,7 +58,7 @@
         <a href="<%= @centre.pinterest %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
           <div class="flag__image">
             <div class="box islet">
-              <span class="icon icon--pinterest icon--base-color" aria-hidden="true"></span>
+              <span class="icon icon--pinterest icon--base-color icon--fixed-width" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
@@ -75,7 +75,7 @@
         <a href="<%= @centre.youtube %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
           <div class="flag__image">
             <div class="box islet">
-              <span class="icon icon--youtube icon--base-color" aria-hidden="true"></span>
+              <span class="icon icon--youtube icon--base-color icon--fixed-width" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
@@ -92,7 +92,7 @@
         <a href="<%= @centre.google_plus %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
           <div class="flag__image">
             <div class="box islet">
-              <span class="icon icon--google-plus icon--base-color" aria-hidden="true"></span>
+              <span class="icon icon--google-plus icon--base-color icon--fixed-width" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
