--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,7 @@
 							<!-- <li><%#= link_to centre_dining_path(params[:centre_id] || params[:id]), :class => (page?(:dining) ? 'is-active' : nil), target: '_self' do %><span class="icon icon--dining icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Dining</span><%# end %></li> -->
 							<li><%= link_to centre_movies_path(params[:centre_id] || params[:id]), :class => (page?(:movies) ? 'is-active' : nil), target: '_self' do %><span class="icon icon--video icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Cinemas</span><% end %></li>
 							<li><%= link_to centre_info_path(params[:centre_id] || params[:id]), :class => (page?(:centre_info) ? 'is-active' : nil), target: '_self' do %><span class="icon icon--info icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Centre Information</span><% end %></li>
-							<!-- <li><%#= link_to centre_services_details_path(params[:centre_id] || params[:id]), :class => (page?(:centre_services_details) ? 'is-active' : nil), target: '_self' do %><span class="icon icon--service icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Centre Services</span><%# end %></li> -->
+							<li><%= link_to centre_services_path(params[:centre_id] || params[:id]), :class => (page?(:centre_service_details) ? 'is-active' : nil), target: '_self' do %><span class="icon icon--service icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Centre Services</span><% end %></li>
 						</ul>
 					</nav>
 
