move map partials to micello_maps folder

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -42,7 +42,7 @@
 
         <%# Store location %>
         <div class="map-micello map-micello--static detail-view__divider">
-          <%= render partial: 'shared/map', locals: {store_id: @centre_stores.first.try(:id), interactive: false, load_immediately: true} %>
+          <%= render partial: 'shared/micello_maps/map', locals: {store_id: @centre_stores.first.try(:id), interactive: false, load_immediately: true} %>
         </div>
         <%# //Store location %>
 
