--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -161,7 +161,7 @@
 
   <%# Map %>
   <div class="stores-maps__map map-micello js-stores-maps-toggle-map" id="stores-maps-toggle-map">
-    <%= render partial: 'shared/map', locals: {store_id: nil, interactive: true, load_immediately: false} %>
+    <%= render partial: 'shared/micello_maps/map', locals: {store_id: nil, interactive: true, load_immediately: false} %>
   </div>
   <%# //Map %>
 
