--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -25,9 +25,9 @@
   <div id="map-micello-api" class="map-micello__api js-disabled-hide">
     <span class="preloader preloader--middle preloader--light"><span class="preloader__spinner"></span><em class="hide-visually">Loading, please wait&#8230;</em></span>
   </div>
-  <div class="map-micello__overlay-wrap">
+  <script type="text/html-template" class="map-micello__overlay-wrap">
     <%= render partial: 'shared/micello_map_popup' %>
-  </div>
+  </script>
 <!--<![endif]-->
 <% content_for :javascript do %>
   <%= cloudinary_js_config %>
