stabilizes map toggle across devices

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :class_for_main, "container--wide" %>
 
-<div class="stores-maps stores-maps--listing container js-stores-maps-toggle-wrap">
+<div class="stores-maps stores-maps--listing container js-stores-maps-toggle-wrap is-list-view">
 
   <h1 class="hide-visually">Stores</h1>
 
