--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -16,7 +16,7 @@
     Store details
   </a>
   <%% } else {  %>
-  <button class="map-micello__overlay__cta btn btn--full btn--main js-stores-maps-toggle-btn" aria-owns="stores-maps-toggle-listing-detail, stores-maps-toggle-map">
+  <button class="map-micello__overlay__cta btn btn--full btn--main js-stores-maps-toggle-btn js-map-hide" aria-owns="stores-maps-toggle-listing-detail, stores-maps-toggle-map">
     <span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>
     Store details
   </button>
