--- a/app/views/categories/_super_cat_nav.html.erb
+++ b/app/views/categories/_super_cat_nav.html.erb
@@ -2,14 +2,13 @@
 <a href="#" ng-click="filterCategory( 'super_cat', '<%= category.code %>' )"><%= category.short_name %></a>
   <div class="drop-down-menu__target drop-down box box--drop-down">
     <ul class="drop-down-menu__list">
-      <li class="drop-down-menu__divider "><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
-      <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
-      <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
-      <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Scelerisque augue elementum</a></li>
-      <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Tincidunt rhoncus</a></li>
-      <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Aliquet elementum</a></li>
-      <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
-      <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Adipiscing magna</a></li>
+      <%=
+        render(
+          :collection => category.children,
+          :partial => 'categories/category_nav',
+          :as => :category
+        )
+      %>
     </ul>
   </div>
 </li>
