--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -10,6 +10,15 @@
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
 
   <%# Prefetch DNS for external assets %>
+  <link rel="dns-prefetch" href="//tags.tiqcdn.com">
+  <link rel="dns-prefetch" href="//js-agent.newrelic.com">
+  <link rel="dns-prefetch" href="//beacon-1.newrelic.com">
+  <link rel="dns-prefetch" href="//testdata.coremetrics.com">
+  <link rel="dns-prefetch" href="//libs.coremetrics.com">
+  <link rel="dns-prefetch" href="//s.clicktale.net">
+  <link rel="dns-prefetch" href="//stats.g.doubleclick.net">
+  <link rel="dns-prefetch" href="//maps.micello.com">
+  <link rel="dns-prefetch" href="//res.cloudinary.com">
   <link rel="dns-prefetch" href="//www.google-analytics.com">
   <link rel="dns-prefetch" href="//ajax.googleapis.com">
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
