--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -1,21 +1,4 @@
-<script type="text/ng-template" id="categorySectionNavItemTemplate">
-  <div class="nav-contextual__clip">
-    <nav class="nav-contextual__clip__inner" role="navigation" aria-label="Categories navigation">
-      <ul class="nav-contextual__list horiz-list js-nav-contextual-list" ng-controller="ProductBrowseController">
-        <li ng-repeat="super_category in super_categories" class="drop-down-menu drop-down-container drop-down-container--hover">
-          <a href="#" ng-class="{'is-active': isActiveT1Category(super_category)}" ng-click="filterCategory( 'super_cat', super_category.code )">{{ super_category.short_name }}</a>
-          <div class="drop-down-menu__target drop-down box box--drop-down">
-            <ul class="drop-down-menu__list">
-              <li ng-repeat="category in super_category.children" class="drop-down-menu__divider "><a href="#" class="btn btn--full btn--full-left" ng-click="filterCategory( 'category', category.code )">{{ category.name }}</a></li>
-            </ul>
-          </div>
-        </li>
-      </ul>
-    </nav>
-    <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
-  </div>
-</script>
-<div ng-controller="ProductBrowseController" ng-init="bootstrap()" class="section-nav container container--wide container--dark">
+<div class="section-nav container container--wide container--dark">
 
   <%# Section nav %>
   <%# [BACKEND]: this 'if' can be removed when everything is dynamic %>
@@ -25,7 +8,93 @@
         - We have to keep the HTML comments between each top level `li`s or output them all on 1 line, this is to get around the browser creating unneeded white space.
         - Class `is-active` needs to be appended to the active top level `a`s i.e. the page the user is on which includes any sub categories but do not append the class onto the sub category `a`s (only top level).
     %>
-    <div ng-include src="'categorySectionNavItemTemplate'" class="nav-contextual nav-contextual--dark js-nav-contextual"></div>
+    <%#<div class="nav-contextual nav-contextual--dark js-nav-contextual">
+      <div class="nav-contextual__clip">
+        <nav class="nav-contextual__clip__inner" role="navigation" aria-label="Categories navigation">
+          <ul class="nav-contextual__list horiz-list js-nav-contextual-list">
+            <li class="drop-down-menu drop-down-container drop-down-container--hover">
+              <a href="#">Women</a>
+              <div class="drop-down-menu__target drop-down box box--drop-down">
+                <ul class="drop-down-menu__list">
+                  <li class="drop-down-menu__divider "><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Scelerisque augue elementum</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Tincidunt rhoncus</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Aliquet elementum</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                  <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Adipiscing magna</a></li>
+                </ul>
+              </div>
+            </li><!--
+            --><li class="drop-down-menu drop-down-container drop-down-container--hover">
+                <a href="#">Men</a>
+                <div class="drop-down-menu__target drop-down box box--drop-down">
+                  <ul class="drop-down-menu__list">
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Scelerisque augue elementum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Tincidunt rhoncus</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Aliquet elementum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Adipiscing magna</a></li>
+                  </ul>
+                </div>
+            </li><!--
+            --><li class="drop-down-menu drop-down-container drop-down-container--hover">
+                <a href="#">Kids</a>
+                <div class="drop-down-menu__target drop-down box box--drop-down">
+                  <ul class="drop-down-menu__list">
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Scelerisque augue elementum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Tincidunt rhoncus</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Aliquet elementum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Adipiscing magna</a></li>
+                  </ul>
+                </div>
+            </li><!--
+            --><li class="drop-down-menu drop-down-container drop-down-container--hover">
+                <a href="#">Shoes</a>
+                <div class="drop-down-menu__target drop-down box box--drop-down">
+                  <ul class="drop-down-menu__list">
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                  </ul>
+                </div>
+            </li><!--
+            --><li class="drop-down-menu drop-down-container drop-down-container--hover">
+                <a href="#">Beauty</a>
+                <div class="drop-down-menu__target drop-down box box--drop-down">
+                  <ul class="drop-down-menu__list">
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                  </ul>
+                </div>
+            </li><!--
+            --><li class="drop-down-menu drop-down-container drop-down-container--hover">
+                <a href="#">Bags</a>
+                <div class="drop-down-menu__target drop-down box box--drop-down">
+                  <ul class="drop-down-menu__list">
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Magna pulvinar</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Porttitor pellentesque</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Lorem ipsum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Scelerisque augue elementum</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Tincidunt rhoncus</a></li>
+                    <li class="drop-down-menu__divider"><a href="#" class="btn btn--full btn--full-left">Aliquet elementum</a></li>
+                  </ul>
+                </div>
+            </li>
+          </ul>
+        </nav>
+        <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
+      </div>
+    </div>%>
     <%# Show products/deals/events centre selector toggle button %>
     <%# if @centre.present? %>
       <button class="btn btn--main btn--main-alt4 btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle">
